--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,173 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="MainActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="172dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="HangOn Yourself"
+            android:textColor="#000"
+            android:textSize="30dp"
+            android:fontFamily="@font/font_family"/>
 
 
-    <Button
-        android:id="@+id/love_button"
-        android:layout_width="344dp"
-        android:layout_height="63dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/buttonshape"
-        android:fontFamily="monospace"
-        android:onClick="love"
-        android:textColor="@color/white"
-        android:text="@string/love_button"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/joy_button"
-        app:layout_constraintEnd_toEndOf="@+id/joy_button"
-        app:layout_constraintStart_toStartOf="@+id/joy_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/title_text_view"
+            android:layout_width="366dp"
+            android:layout_height="100dp"
+            android:layout_above="@+id/emojify_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="40dp"
+            android:fontFamily="@font/font_family"
+            android:text="Get songs according to your mood and enjoy your day!!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="#000"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/joy_button"
-        android:layout_width="344dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/buttonshape1"
-        android:fontFamily="monospace"
-        android:onClick="joy"
-        android:textColor="@color/white"
-        android:text="@string/joy_button"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/happy_button"
-        app:layout_constraintEnd_toEndOf="@+id/happy_button"
-        app:layout_constraintStart_toStartOf="@+id/happy_button"
-        app:layout_constraintTop_toBottomOf="@+id/love_button" />
+        <ImageView
+            android:id="@+id/test_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
-    <Button
-        android:id="@+id/happy_button"
-        android:layout_width="344dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/buttonshape2"
-        android:fontFamily="monospace"
-        android:onClick="happy"
-        android:textColor="@color/white"
-        android:text="@string/happy_button"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/anger_button"
-        app:layout_constraintEnd_toEndOf="@+id/anger_button"
-        app:layout_constraintStart_toStartOf="@+id/anger_button"
-        app:layout_constraintTop_toBottomOf="@+id/joy_button" />
+        <Button
+            android:id="@+id/emojify_button"
+            android:layout_width="191dp"
+            android:layout_height="34dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/rounded_button_bg"
+            android:text="Go for it"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="#ffff"
+            android:textSize="18dp" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/anger_button"
-        android:layout_width="344dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/buttonshape3"
-        android:fontFamily="monospace"
-        android:onClick="anger"
-        android:textColor="@color/white"
-        android:text="@string/anger_button"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/sadness_button"
-        app:layout_constraintEnd_toEndOf="@+id/sadness_button"
-        app:layout_constraintStart_toStartOf="@+id/sadness_button"
-        app:layout_constraintTop_toBottomOf="@+id/happy_button" />
-
-    <Button
-        android:id="@+id/sadness_button"
-        android:layout_width="344dp"
-        android:layout_height="64dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/buttonshape4"
-        android:fontFamily="monospace"
-        android:onClick="sadness"
-        android:textColor="@color/white"
-        android:text="@string/sadness_button"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/anger_button" />
-
-    <Button
-        android:id="@+id/play"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/clear_button"
         android:layout_width="wrap_content"
-        android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/play_button"
-        android:onClick="pause_button"
-        android:textColor="@color/white"
-        android:text="@string/pause_button"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pause"
-        app:layout_constraintTop_toBottomOf="@+id/sadness_button" />
-
-    <Button
-        android:id="@+id/pause"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/pause_button"
-        android:onClick="play_button"
-        android:textColor="@color/white"
-        android:text="@string/play_button"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/play"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sadness_button" />
-
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigationView"
-        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:itemBackground="@color/colorPrimary"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/navigation"
-        android:fitsSystemWindows="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_clear_black_24dp"
+        android:visibility="gone"
+        app:backgroundTint="@android:color/white"
+        app:fabSize="mini" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/save_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_save_black_24dp"
+        android:visibility="gone"
+        app:backgroundTint="@android:color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+
+        android:id="@+id/share_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/ic_share_black_24dp"
+        android:visibility="gone"
+        app:backgroundTint="@android:color/white" />
+
+</LinearLayout>
