--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,10 +41,10 @@
             android:textSize="25dp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/test_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
+        <TextView
+            android:id="@+id/test_emotion_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/emojify_button"
